# rusted-doom-launcher

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
content/: catalog.test.ts
content/wads/: 1000-lines-3-community-project.json  50-shades-of-graytall.json  5till-l1-complex.json  abandon.json  absolutely-killed.json  action-doom-2-urban-brawl.json  action-doom.json  alpha-accident-terra-nova.json  ancient-aliens.json  angmngthoo.json  antaresian-reliquary.json  ar-luminae.json  arcadia-demade.json  arrival.json  ashes-afterglow.json  austrian-avian-association.json  avactor-end-of-the-fifth-circle.json  back-to-basics.json  back-to-saturn-x-episode-2.json  back-to-saturn-x.json  base-ganymede-complete.json  bastion-of-chaos.json  beautiful-doom.json  bgpa-missions-liberation.json  blade-of-agony-e1.json  breach.json  brigandine.json  brutal-doom.json  cheogsh.json  chex-quest-3.json  chosen.json  cold-as-hell.json  comatose.json  combat-shock-2.json  community-chest-2.json  community-chest-3.json  community-chest-4.json  congestion-1024.json  counterattack.json  crimson-canyon.json  (+190 more)
scripts/: add_images_from_doomwiki.py  add_urls_field.py  audit_info_sources.py  audit_mapinfo_authors.py  audit_metadata.py  backfill_cacoward_links.py  backfill_forum_threads.py  bump-version.js  dump_mapinfo.py  extract_doomwiki_images.py  extract_level_names.py  extract_titlepic.py  extract_titlepic_from_zip.py  extract_wad_metadata.py  scrape_doomwiki_wad.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: common.json  default.json  linux.json  macos.json  windows.json
src-tauri/src/: game_archives.rs  gog_import.rs  launcher_downloads.rs  lib.rs  moddb.rs
src/assets/iwads/: SOURCES.md
src/components/: AboutView.vue  AddCustomTile.vue  CustomModView.vue  DownloadPlayButton.vue  ExploreCard.vue  ExploreView.vue  FilterBar.vue  GameplayLogView.vue  LibraryView.vue  MainView.vue  ModsView.vue  RunsView.vue  SettingsView.vue  Sidebar.vue  WadCard.vue  WadLinks.vue  WadList.vue
src/composables/: downloadState.ts  useCustomImport.ts  useCustomWads.ts  useDownload.ts  useDownloadState.ts  useGZDoom.ts  useGameplayLog.ts  useGogImport.ts  useLevelNames.ts  useLibrary.ts  useSaves.ts  useSettings.ts  useStats.ts  useWadSummaries.ts  useWads.ts
src/lib/: constants.ts  extraArgs.test.ts  extraArgs.ts  format.ts  gameplayLogSchema.ts  gogContent.ts  platform.ts  saveParser.ts  schema.test.ts  schema.ts  slug.ts  statsSchema.ts  wadInspect.ts  wadLinks.ts  wadParser.ts  zipExtract.test.ts  zipExtract.ts
