[package]
name = "rusted-doom-launcher"
version = "0.1.6"
description = "Rusted Doom Launcher - browse, preview, and launch Doom WADs"
authors = ["Piotr Migdał"]
edition = "2024"

[lib]
name = "doom_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
# MCP bridge for Claude Code debugging (hypothesi/tauri-mcp-server)
tauri-plugin-mcp-bridge = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
# Pinned to 0.61.3 to match the version Tauri itself depends on, avoiding two
# copies of the windows crate in the lockfile and a larger Windows build.
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
] }
