[package]
name = "rusted-doom-launcher"
version = "0.1.6"
description = "Rusted Doom Launcher - browse, preview, and launch Doom WADs"
authors = ["Piotr Migdał"]
edition = "2024"

[lib]
name = "doom_launcher_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
# MCP bridge for Claude Code debugging (hypothesi/tauri-mcp-server)
tauri-plugin-mcp-bridge = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Chrome TLS fingerprint for ModDB handshake (Cloudflare blocks default reqwest/rustls).
# Only used for 3 small HTML fetches; the final signed CDN URL downloads via tauri-plugin-upload.
rquest = { version = "5", default-features = false, features = ["webpki-roots", "gzip", "brotli", "cookies"] }
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
# Pinned to 0.61.3 to match the version Tauri itself depends on, avoiding two
# copies of the windows crate in the lockfile and a larger Windows build.
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.dev]
debug = "line-tables-only"
