[package]
name = "rusted-doom-launcher"
version = "0.3.6"
description = "Rusted Doom Launcher - browse, preview, and launch Doom WADs"
authors = ["Piotr Migdał"]
edition = "2024"

[lib]
name = "doom_launcher_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# NOTE: `time` is pinned to 0.3.47 in Cargo.lock — 0.3.48 fails to compile
# the `cookie` crate (E0119 future-incompat) and cookie 0.18.1 is the newest
# version tauri's tree allows. After any `cargo update`, re-pin with:
#   cargo update -p time --precise 0.3.47
# and drop this note once cookie/time resolve the conflict upstream.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-upload = "2"
# MCP bridge for Claude Code debugging (hypothesi/tauri-mcp-server)
tauri-plugin-mcp-bridge = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Pinned to 0.61.3 to match the version Tauri itself depends on, avoiding two
# copies of the windows crate in the lockfile and a larger Windows build.
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[profile.dev]
debug = "line-tables-only"
